<resources>
    <string name="app_name">FlashCard</string>
    <string name="auth_login_title">Sign in</string>
    <string name="auth_login_subtitle">Welcome back you\'ve\nbeen missed</string>
    <string name="auth_register_title">Sign up</string>
    <string name="auth_register_subtitle">Create your account to start\nlearning smarter</string>
    <string name="auth_email">Email</string>
    <string name="auth_email_hint">example123@gmail.com</string>
    <string name="auth_password">Password</string>
    <string name="auth_password_hint">Enter your password</string>
    <string name="auth_confirm_password">Confirm password</string>
    <string name="auth_confirm_password_hint">Re-enter your password</string>
    <string name="auth_login_action">Sign in</string>
    <string name="auth_register_action">Create account</string>
    <string name="auth_no_account">Don\'t have an account?</string>
    <string name="auth_have_account">Already have an account?</string>
    <string name="auth_sign_up_link">Sign up</string>
    <string name="auth_sign_in_link">Sign in</string>
    <string name="auth_or">Or</string>
    <string name="auth_google_cta">Continue with Google</string>
    <string name="auth_forgot_password">Forgot your password?</string>
    <string name="auth_invalid_email">Please enter a valid email address.</string>
    <string name="auth_invalid_password">Password must be at least 6 characters.</string>
    <string name="auth_password_not_match">Passwords do not match.</string>
    <string name="auth_google_placeholder">Google Sign-In is not enabled in this flow.</string>
    <string name="auth_forgot_password_placeholder">Forgot password will be connected later.</string>
    <string name="auth_register_success">Account created successfully.</string>
    <string name="auth_main_placeholder">Signed in successfully. This screen is ready for the home flow.</string>
    <string name="auth_continue_as_guest">Use without signing in</string>
    <string name="auth_guest_mode_hint">You can use the app locally without an account. Sign in anytime to enable cloud sync.</string>
    <string name="auth_guest_name">Guest mode</string>
    <string name="auth_guest_email_placeholder">Not signed in yet</string>
    <string name="auth_sign_in_to_sync">Sign in to sync data</string>
    <string name="speech_listen_english">Listen to English</string>
    <string name="speech_not_available">English voice is unavailable on this device.</string>
</resources>
